# rift

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  README.md
.github/scripts/: bench_regression.py  run_benches.sh
.github/workflows/: benchmark-publish.yml  ci.yml  decision-sweeps.yml  demo-compose.yml  docker-publish-benchmark.yml  docker-publish.yml  perf.yml  publish-crate.yml  release.yml  update-homebrew.yml
crates/rift-core/: Cargo.toml
crates/rift-ffi/: Cargo.toml
crates/rift-http-proxy/: Cargo.toml  Dockerfile  Dockerfile.prebuilt  Dockerfile.static
crates/rift-http-proxy/benches/: matcher_bench.rs
crates/rift-http-proxy/src/: admin_api.rs  behaviors.rs  config_loader.rs  imposter.rs  injection_gate.rs  intercept.rs  intercept_control.rs  intercept_rules.rs  lib.rs  main.rs  matcher.rs  proxy.rs  runtime.rs  server.rs  stub_analysis.rs  template.rs  util.rs
crates/rift-http-proxy/src/admin_api/: mod.rs  request_filter.rs  router.rs  server.rs  types.rs
crates/rift-http-proxy/src/admin_api/handlers/: imposters.rs  intercept.rs  mod.rs  scenarios.rs  stubs.rs  system.rs
crates/rift-http-proxy/src/backends/: inmemory.rs  redis.rs
crates/rift-http-proxy/src/behaviors/: copy.rs  cycler.rs  extraction.rs  lookup.rs  mod.rs  request.rs  transform.rs  types.rs  wait.rs
crates/rift-http-proxy/src/config/: mod.rs
crates/rift-http-proxy/src/extensions/: fault.rs  matcher.rs  routing.rs  stub_analysis.rs
crates/rift-http-proxy/src/imposter/: core.rs  handler.rs  manager.rs  mod.rs  predicates.rs  response.rs  tests.rs  types.rs
crates/rift-http-proxy/src/predicate/: body_matcher.rs  field_matcher.rs  mod.rs  path_matcher.rs  string_matcher.rs
crates/rift-http-proxy/src/proxy/: forwarding.rs  handler.rs  mod.rs  server.rs  tests.rs
crates/rift-http-proxy/src/recording/: mod.rs  store.rs  stub_generator.rs  types.rs
crates/rift-http-proxy/src/response/: builder.rs
crates/rift-http-proxy/src/scripting/: decision_cache.rs  js_engine.rs  js_validator.rs  lua_engine.rs  lua_validator.rs  mod.rs  rhai_engine.rs  rhai_validator.rs  script_pool.rs  stub_validator.rs
crates/rift-http-proxy/tests/: admin_api_integration.rs  corpus_replay.rs  embedded_server.rs  intercept_runtime_lifecycle.rs  issue_269_static_wiring.rs  issue_272_set_cookie_multi_value.rs  issue_355_inject_error_parity.rs  issue_360_script_cli.rs  mountebank_compatibility.rs  redis_backend.rs  rift_extensions.rs  verify_dynamic.rs  verify_json.rs
crates/rift-http-proxy/tests/support/: mod.rs
crates/rift-lint/: Cargo.toml  Dockerfile  Dockerfile.prebuilt  README.md
crates/rift-mock-core/: Cargo.toml
crates/rift-tui/: Cargo.toml  README.md
crates/rift-tui/src/: api.rs  app.rs  event.rs  lib.rs  main.rs  theme.rs  validation.rs
crates/rift-tui/src/app/: events.rs  mod.rs  search.rs
crates/rift-tui/src/app/commands/: curl.rs  imposters.rs  io.rs  mod.rs  proxy.rs  stubs.rs
crates/rift-tui/src/components/: mod.rs  text_editor.rs
crates/rift-tui/src/ui/: config.rs  dialogs.rs  help.rs  imposter_detail.rs  imposters.rs  metrics.rs  mod.rs  request_detail.rs  stubs.rs
crates/rift-types/: Cargo.toml
crates/rift-types/src/: lib.rs  predicate.rs
docs/: DEVELOPER_GUIDE.md  _config.yml  changelog.md  index.md
docs/api/: index.md
docs/concepts/: building-blocks.md  index.md  rift-model.md
docs/configuration/: cli.md  index.md  mountebank.md  native.md
docs/demo/: .gitignore  README.md  docker-compose-https.yml  docker-compose-native.yml  docker-compose-retry-proxy.yml  docker-compose-rift-features.yml  docker-compose-scripting-engines.yml  docker-compose-scripting.yml  (+10 more)
examples/: task-management-api.json
scripts/: install-benchmark-tools.sh  install-git-hooks.sh  install-local.sh  install.sh  verify-demo-compose.sh  verify-ffi-cdylib.sh
tests/compatibility/: COMPATIBILITY_COVERAGE.md  Cargo.toml  MOUNTEBANK_RIFT_COMPATIBILITY_MATRIX.md  README.md  docker-compose.yml  run-tests.sh
tests/compatibility/configs/: basic-imposters.json
tests/compatibility/features/: admin_api.feature  alternative_formats.feature  complex_scenarios.feature  debug_mode.feature  mountebank_compatibility_gaps.feature  predicates.feature  proxy.feature  recording.feature  responses.feature  rift_extensions.feature  stub_management.feature
tests/compatibility/src/: http_client.rs  lib.rs  steps.rs  world.rs
tests/compatibility/src/steps/: given.rs  rift_only.rs  then.rs  when.rs
tests/compatibility/tests/: compatibility.rs  rift_only.rs
(+135 files in other folders)
