[package]
name = "rift-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

# Crate metadata
description = "Interactive Terminal User Interface for Rift HTTP Proxy"
readme = "README.md"
keywords = ["tui", "terminal", "http", "mock", "proxy"]
categories = ["command-line-interface", "development-tools::testing"]

[dependencies]
# TUI framework - latest version
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# UI widgets from tui-widgets ecosystem
tui-popup = "0.7"
tui-prompts = "0.6.1"

# Clipboard support
arboard = "3.4"

# Directory paths
dirs = "5.0"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

# HTTP client for Admin API
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[[bin]]
name = "rift-tui"
path = "src/main.rs"

[lib]
name = "rift_tui"
path = "src/lib.rs"
