[package]
name = "rift-compatibility-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# BDD framework
cucumber = "0.21"
futures = "0.3"

# Async runtime
tokio = { version = "1.44", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Test containers
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["blocking"] }

# Utilities
async-trait = "0.1"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.11"

[[test]]
name = "compatibility"
harness = false
